Fixing navbar alignment in IE11 (#880)
* Changed navbar styles

* Updated styles

* Updating navbar styles

--- a/src/modules/navbar/navbar.component.scss
+++ b/src/modules/navbar/navbar.component.scss
@@ -2,4 +2,7 @@
 
 .sky-navbar {
   background-color: $sky-nav-background-color;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
 }
